fix clearing & cropped

--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ div.img-container#one { height: 262px; }
 img.display#two { height: 330px; }
 div.img-container#two { height: 332px; }
 img#profile-image {
-	height: 150px;
+	height: auto;
+	width: 150px;
 	float: left;
 	margin-right: 18px;
 	margin-left: 80px;
@@ -59,6 +60,7 @@ p.footer {
 	font-variant: small-caps;
 	font-style: italic;
 	color: grey;
+	clear: both;
 }
 
 /* mobile */
@@ -87,7 +89,6 @@ p.footer {
 	div.img-container#two { height: 600px; }
 	div#profile-words { width: auto; }
 	img#profile-image {
-		height: auto;
 		width: 80%;
 		float: none;
 		margin-right: 0px;
